--- a/styl.css
+++ b/styl.css
@@ -3,6 +3,7 @@
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./src/css/style.css ***!
   \*******************************************************************************************************************************************/
 @import url(https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap);
+
 /*!*********************************************************************************************************************************************!*\
     !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./src/css/animate.css ***!
 @charset "UTF-8";
@@ -1970,6 +1971,10 @@ body {
 
     .container {
         max-width: 425px;
+    }
+
+    header img {
+        margin-left: -30px
     }
 }
 
